manifest/objects/Web_URLs__c.object
<CustomObject>
    <description>Storage of Teladoc custom URLs for print and web fulfillment</description>
    <fields>
        <fullName>CS_Phone_Number__c</fullName>
        <description>Call Center Phone number for specific custom URL</description>
        <inlineHelpText>Call Center Phone number for specific custom URL</inlineHelpText>
        <label>CS Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_by_Design__c</fullName>
        <description>The date it was completed by Design</description>
        <inlineHelpText>The date it was completed by Design</inlineHelpText>
        <label>Completed by Design</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>This is the date the URL and Account goes live</description>
        <inlineHelpText>This is the date the URL and Account goes live</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_of_Voice_File__c</fullName>
        <description>The option for the voice script</description>
        <inlineHelpText>The option for the voice script</inlineHelpText>
        <label>Location of Voice File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Teladoc Main</fullName>
                </value>
                <value>
                    <fullName>Teladoc Aetna long</fullName>
                </value>
                <value>
                    <fullName>Aetna Short</fullName>
                </value>
                <value>
                    <fullName>Teladoc Health Plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Login_URL_Full__c</fullName>
        <label>Login URL Full</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Login_URL__c</fullName>
        <label>Login URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_URL__c</fullName>
        <label>Registration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMS_Text__c</fullName>
        <description>The text message that is sent to the registered member</description>
        <inlineHelpText>The text message that is sent to the registered member</inlineHelpText>
        <label>SMS Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMS__c</fullName>
        <label>SMS</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Full__c</fullName>
        <description>The full version of print URL</description>
        <label>URL_Full</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Voice_Script__c</fullName>
        <description>The voice script that is given when the member calls the CS Phone Number</description>
        <inlineHelpText>The voice script that is given when the member calls the CS Phone Number</inlineHelpText>
        <label>Voice Script</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Web URLs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Launch_Date__c</columns>
        <columns>NAME</columns>
        <columns>SMS__c</columns>
        <columns>CS_Phone_Number__c</columns>
        <columns>Login_URL__c</columns>
        <columns>Registration_URL__c</columns>
        <columns>Login_URL_Full__c</columns>
        <columns>URL_Full__c</columns>
        <columns>Comment__c</columns>
        <columns>Voice_Script__c</columns>
        <columns>SMS_Text__c</columns>
        <columns>Location_of_Voice_File__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Web URL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web URLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>